gcc/testsuite/rust/rustc/ui/issues/issue-3993.rs
use zoo::fly; // { dg-error ".E0603." "" { target *-*-* } }

mod zoo {
    fn fly() {}
}


fn main() {
    fly();
}

